syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.myz.wxapp.api.task";
option java_outer_classname = "TaskProto";
option objc_class_prefix = "HLW";

package task;

message CreateTaskRequest {
    int64 userId = 1;

    string name = 2;

    string description = 3;

    int32 taskType = 4;

    int32 execType = 5;

    int32 periodType = 6;

    int64 fireTime = 7;
}

message CreateTaskReply {
    int64 taskId = 1;
}

message QueryTaskRequest {
    int64 userId = 1;
    int32 status = 2;
}

message QueryTaskResult {
    int32 length = 1;
    repeated UserTask tasks = 2;
}

message UserTask {

    int64 id = 1;

    int64 userId = 2;

    string name = 3;

    string description = 4;

    int32 status = 5;

    int32 taskType = 6;

    int64 createTime = 7;

    TaskExecution execution = 8;
}

message TaskExecution {
    int32 execType = 1;

    int32 periodType = 2;

    int64 fireTime = 3;

    int64 nextFireTime = 4;
}

message CancelTaskRequest {
    int64 userId = 1;
    int64 taskId = 2;
}

message CancelTaskReply {
    int64 userId = 1;
    int64 taskId = 2;
    int32 status = 3;
}

service TaskService {
    rpc createTask(CreateTaskRequest) returns (CreateTaskReply);

    rpc queryTask(QueryTaskRequest) returns (QueryTaskResult);

    rpc cancelTask(CancelTaskRequest) returns (CancelTaskReply);
}